# yew-playground

./: Cargo.toml  index.html
src/: main.rs
src/data/: cities.csv
