[package]
name = "yewtest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
csv = "1.1"
yew-components = "0.3"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.4"
simsearch = "0.2"

[profile.release]
lto = true
opt-level = 's'
